# LogicalChaosBrain

./: .gitignore  BUILD_ERRORS_LOG.md  BUILD_FIX_SUMMARY.md  LogicalChaos.cmajorpatch  Main.cmajor  README.md  SDK_SETUP_FIX.md  android-build-fixes.patch  build-android-local.sh  logical_chaos_fix.patch  view.js
.emergent/: emergent.yml
.github/android-templates/: AndroidManifest.xml  MainActivity.java  android_bridge.cpp  app-build.gradle  build.gradle  cmake-android-jni-append.cmake  index.html  settings.gradle  strings.xml
.github/scripts/: patch_android.py
.github/workflows/: OptionB.yml  build-android.yml  build-fallback-vst3.yml  build-ios-ipa.yml  build-ios-standalone.yml  build-mac-vst3.yml  build-windows-vst3.yml
Docs/: README.md  cmaj_Logical_Chaos_Melody_Machine.js  index.html  view.js
backend/tests/: test_android_ci_templates.py  test_midi_host_sync_static.py
ios/: CMakeLists.txt  ExportOptions.plist
ios/App/: Info.plist  LCAppDelegate.h  LCAppDelegate.mm  LCAudioEngine.h  LCAudioEngine.mm  LCViewController.h  LCViewController.mm  LCWebViewController.mm  main.mm
memory/: PRD.md  test_credentials.md
src/: LogicalChaosEngine.cpp  LogicalChaosEngine.h
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
test_reports/pytest/: pytest_results.xml
vst3/: CMakeLists.txt  LogicalChaosVST3.cpp
