cmake_minimum_required(VERSION 3.22)

project(LogicalChaosIOS LANGUAGES C CXX OBJC OBJCXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_OBJCXX_STANDARD 17)
set(CMAKE_OBJCXX_STANDARD_REQUIRED ON)

set(LOGICAL_CHAOS_IOS_BUNDLE_ID "com.subfigames.logicalchaos.ios" CACHE STRING "iOS bundle identifier")
set(LOGICAL_CHAOS_IOS_TEAM_ID "" CACHE STRING "Apple Development Team ID used for signed device builds")
set(LOGICAL_CHAOS_IOS_CODE_SIGN_STYLE "Manual" CACHE STRING "Xcode signing style")
set(LOGICAL_CHAOS_IOS_CODE_SIGN_IDENTITY "Apple Distribution" CACHE STRING "Xcode signing identity")
set(LOGICAL_CHAOS_IOS_PROVISIONING_PROFILE_SPECIFIER "" CACHE STRING "Provisioning profile specifier/name")
set(LOGICAL_CHAOS_IOS_CODE_SIGNING_ALLOWED "NO" CACHE STRING "Whether Xcode is allowed to code sign")

set(APP_SOURCES
    App/main.mm
    App/LCAppDelegate.mm
    App/LCViewController.mm
    App/LCAudioEngine.mm
    ../src/LogicalChaosEngine.cpp
)

add_executable(LogicalChaosIOS MACOSX_BUNDLE ${APP_SOURCES})

set_target_properties(LogicalChaosIOS PROPERTIES
    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/App/Info.plist
    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "${LOGICAL_CHAOS_IOS_BUNDLE_ID}"
    XCODE_ATTRIBUTE_PRODUCT_NAME "Logical Chaos"
    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
    XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "15.0"
    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC "YES"
    XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME ""
    XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "${LOGICAL_CHAOS_IOS_TEAM_ID}"
    XCODE_ATTRIBUTE_CODE_SIGN_STYLE "${LOGICAL_CHAOS_IOS_CODE_SIGN_STYLE}"
    XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "${LOGICAL_CHAOS_IOS_CODE_SIGN_IDENTITY}"
    XCODE_ATTRIBUTE_PROVISIONING_PROFILE_SPECIFIER "${LOGICAL_CHAOS_IOS_PROVISIONING_PROFILE_SPECIFIER}"
    XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED "${LOGICAL_CHAOS_IOS_CODE_SIGNING_ALLOWED}"
)

target_include_directories(LogicalChaosIOS PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/App
    ${CMAKE_CURRENT_SOURCE_DIR}/../src
)

target_link_libraries(LogicalChaosIOS PRIVATE
    "-framework UIKit"
    "-framework Foundation"
    "-framework QuartzCore"
    "-framework AVFoundation"
)

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    target_compile_options(LogicalChaosIOS PRIVATE
        -Wall
        -Wextra
        -Wpedantic
    )
endif()
